fix visibility 2

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -69,6 +69,5 @@ body {
 }
 
 #search-box {
-  visibility: hidden;
   display: none;
 }
